# composition

./: .gitignore  .markdownlint.jsonc  CLAUDE.md  README.md
docs/: breakpoints.md  database.md  (+21 more)
lib/: Cargo.toml
lib/assets/: audio-player.css
lib/benches/: youtube_parsing.rs
lib/docs/: embedding-strategy.md
lib/src/: api.rs  init.rs  lib.rs
lib/src/ai/: consolidate.rs  embedding.rs  mock.rs  mod.rs  providers.rs  summarize.rs  topic.rs  traits.rs
lib/src/audio/: cache.rs  html.rs  metadata.rs  mod.rs  processor.rs  types.rs
lib/src/audio/snapshots/: lib__audio__html__tests__snapshot_custom_class.snap  lib__audio__html__tests__snapshot_file_reference_mode.snap  lib__audio__html__tests__snapshot_inline_mode.snap  (+1 more)
lib/src/cache/: database.rs  mod.rs  operations.rs  schema.rs
lib/src/error/: mod.rs
lib/src/graph/: builder.rs  cache.rs  cycles.rs  gitignore.rs  mod.rs  utils.rs  workplan.rs
lib/src/image/: cache.rs  html.rs  metadata.rs  mod.rs  processing.rs  source.rs
lib/src/parse/: darkmatter.rs  frontmatter.rs  markdown.rs  mod.rs  resource.rs
lib/src/render/: audio.rs  charts.rs  columns.rs  disclosure.rs  html.rs  interpolation.rs  mod.rs  orchestrator.rs  popover.rs  table.rs  transclusion.rs  youtube.rs
lib/src/types/: darkmatter.rs  document.rs  frontmatter.rs  graph.rs  mod.rs  resource.rs  youtube.rs
lib/tests/: audio_parser.rs  dsl_integration.rs  e2e_workflow.rs  gitignore_integration.rs  image_integration.rs  integration_phase1.rs  parse_integration.rs  spike_async_sync.rs  spike_surrealdb.rs  youtube_integration.rs
lib/tests/common/: fixtures.rs  helpers.rs  mod.rs
(+242 files in other folders)
