[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
pulldown-cmark = "0.13.0"
thiserror = "2.0.17"

# Phase 0 Spike Dependencies
tokio = { version = "1", features = ["full"] }
surrealdb = { version = "1.5", features = ["kv-rocksdb", "kv-mem"] }
rayon = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"

# Phase 1 Additional Dependencies
chrono = { version = "0.4", features = ["serde"] }
url = "2"
tracing = "0.1"
dirs = "5"
ignore = "0.4"
lazy_static = "1.4"

# Phase 2 Additional Dependencies
yaml-rust2 = "0.10"
glob = "0.3"
regex = "1"

# Phase 3 Additional Dependencies
petgraph = "0.6"

# Phase 4 Additional Dependencies (Smart Image Processing)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "avif", "gif"] }
kamadak-exif = "0.5"
reqwest = { version = "0.12", features = ["blocking"] }
base64 = "0.22"
symphonia = { version = "0.5", features = ["mp3", "wav"] }

# Phase 5 Additional Dependencies (Basic Rendering Pipeline)
csv = "1.3"

# Phase 6 Additional Dependencies (AI Integration)
# Note: Not using rig-core due to API instability - using direct provider SDKs instead
async-trait = "0.1"

# Phase 8 Additional Dependencies (Integration & Polish)
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1"
